--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,5 @@
 
-$base_gray_card: hsl(217, 19%, 38%);
+$base_gray_card: hsl(222, 16%, 25%);
 $base_root_background: hsl(218, 23%, 16%);
 $neon_green: hsl(150, 100%, 66%);
+$light_cyan: hsl(193, 38%, 86%);
