--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,35 +1,71 @@
 
 .card__container {
     background-color: $base_gray_card;
-    margin: 0 auto;
-    padding: 30px;
+    margin: 0  auto;
+    padding: 40px 30px;
     font-weight: 800;
     font-size: 12px;
     border-radius: 8px;
-    width: 35%;
+    width: 28%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
-.card__container > div {
-    
-}
 
 .card__body {
     font-size: 20px;
-    color: #fefefe;
+    color: $light_cyan;
     font-weight: 800;
-    letter-spacing: 3px;
-    text-align: justify;
+    letter-spacing: 2px;
+    text-align: center;
+    margin: 25px 0;
 }
 
 .card__header {
     color: $neon_green;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
     text-align: center;
     margin: 0 auto;
+    font-size: 10px;
 }
 
 .card__footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 15px;
+    width: 100%;
+}
+
+.card__footer > img {
+    margin: 0 auto;
+    width: 80%;
+}
+
+.card__button {
+    border-radius: 100%;
+    background-color: red;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    bottom: -25px;
+    background-color: $neon_green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .3s ease-in-out;
+
+    &:hover {
+        cursor: pointer;
+        filter: brightness(140%);
+        background-color: lighten($color: $neon_green, $amount: 0);
+    }
+}
+
+.card__button > img {
+    width: 40%;
+    z-index: 9999;
 }
